<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_badges"
        android:icon="@drawable/ic_badge"
        android:title="@string/nav_badges" />

    <item
        android:id="@+id/navigation_challenges"
        android:icon="@drawable/ic_challenge"
        android:title="@string/nav_challenges" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/nav_leaderboard" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
